Mnt userBackups v3 Terminado

--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.css
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.css
@@ -1,5 +1,5 @@
 .table-fixed tbody {
-  height: 500px;
+  height: 450px;
   overflow-y: auto;
   width: 100%;
 }
@@ -19,7 +19,15 @@
 .table-fixed thead tr th,
 .table-fixed tbody tr td {
   width: 14.28%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .table-fixed thead tr {
   width: calc(100% - 17px);
 }
+
+.table-fixed input, select {
+  background-color: #21252987 !important;
+}
+
