--- a/src/app/Paginas/Body/backups/backups.component.html
+++ b/src/app/Paginas/Body/backups/backups.component.html
@@ -85,7 +85,7 @@
       <!--th scope="col" class="Encabezado-Tabla">Pos</th-->
       <th scope="col" class="Encabezado-Tabla" >
         <div class="row inline-grid">
-          Backup
+          Id_backup
           <input type="search" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtrosSearch.id_backup.value" name="id_backup" (keyup)="actionFilterEvent($event, 'id_backup', true)">
           <button type="button" [ngClass]="(filtrosSearch.id_backup.isFilter) ? 'close': 'btnFilter-disabled'" (click)="resetValuefiltroSearch('id_backup')">
             <span aria-hidden="true">&times;</span>
@@ -94,7 +94,7 @@
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
-          Automatico
+          Automatic
           <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtrosSearch.automatic.value" name="automatic" (ngModelChange)="actionFilterEvent($event, 'automatic')">
             <option value="-1">Ambos</option>
             <option value="0">No</option>
@@ -107,7 +107,7 @@
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
-          Fecha creación
+          Date_creation
           <input type="date" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtrosSearch.date_creation.value" name="date_creation" (ngModelChange)="actionFilterEvent($event, 'date_creation')">
           <button type="button" [ngClass]="(filtrosSearch.date_creation.isFilter) ? 'close': 'btnFilter-disabled'" (click)="resetValuefiltroSearch('date_creation')">
             <span aria-hidden="true">&times;</span>
@@ -116,7 +116,7 @@
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
-          Fecha descarga
+          Date_download
           <input type="date" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="filtrosSearch.date_download.value" name="date_download" (ngModelChange)="actionFilterEvent($event, 'date_download')">
           <button type="button" [ngClass]="(filtrosSearch.date_download.isFilter) ? 'close': 'btnFilter-disabled'" (click)="resetValuefiltroSearch('date_download')">
             <span aria-hidden="true">&times;</span>
@@ -125,7 +125,7 @@
       </th>
       <th scope="col" class="Encabezado-Tabla">
         <div class="row inline-grid">
-          Version
+          Created_in
           <input type="text" class="form-control mr-sm-2 form-control-md input-header"  [(ngModel)]="filtrosSearch.created_in.value" name="created_in" (keyup)="actionFilterEvent($event, 'created_in', true)">
           <button type="button" [ngClass]="(filtrosSearch.created_in.isFilter) ? 'close': 'btnFilter-disabled'" (click)="resetValuefiltroSearch('created_in')">
             <span aria-hidden="true">&times;</span>
@@ -185,7 +185,7 @@
                 <fa-icon [icon]="util.faPen"></fa-icon>
               </span>
           </button>
-          <button type="submit" class="btn btn-danger" style="width: 90px; margin-left: 10px; font-size: 18px" (click)="eliminar([back.pos, i], back)">
+          <button type="submit" class="btn btn-danger" style="width: 90px; margin-left: 10px; font-size: 18px" (click)="eliminar([back.pos, i], back, true)">
               <span>
                 <fa-icon [icon]="util.faTrash"></fa-icon>
               </span>
@@ -203,5 +203,6 @@
   </table>
 
   <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+  <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
 
 </div>
